# sync-striim

./: Cargo.toml  README.md  server_test.py
client/: Cargo.toml
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs
server/src/common/: cookie_store.rs  listener.rs  mod.rs  playing.rs  room.rs  state.rs
server/src/routes/: listener.rs  mod.rs  room.rs  ws.rs
server/static/: index.html  index.js
yt-rs/: Cargo.toml
yt-rs/examples/: b.rs
yt-rs/src/: lib.rs  search_models.rs  stream_models.rs
