[package]
name = "server"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.4.5", features=["headers", "ws"] }
tokio = { version = "1.16", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = { version="0.3.19" }
headers = "0.3"
tower-cookies = "0.4.1"
tower = "0.4.11"
tower-http = { version = "0.2.0", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde_json = "1.0"
async-trait = "0.1"

yt-rs = { path = "../yt-rs" }